--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG hg+unknown-20130427.182125 Configuration
-# Sat Apr 27 18:46:17 2013
+# Sun Apr 28 16:12:27 2013
 #
 CT_CONFIGURE_has_xz=y
 CT_CONFIGURE_has_svn=y
@@ -15,7 +15,8 @@ CT_MODULES=y
 # crosstool-NG behavior
 #
 # CT_OBSOLETE is not set
-# CT_EXPERIMENTAL is not set
+CT_EXPERIMENTAL=y
+# CT_ALLOW_BUILD_AS_ROOT is not set
 # CT_DEBUG_CT is not set
 
 #
@@ -23,6 +24,7 @@ CT_MODULES=y
 #
 CT_LOCAL_TARBALLS_DIR="${CT_TOP_DIR}/tarballs"
 CT_SAVE_TARBALLS=y
+CT_CUSTOM_LOCATION_ROOT_DIR=""
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
 CT_PREFIX_DIR="${HOME}/x-tools/${CT_TARGET}"
 CT_INSTALL_DIR="${CT_PREFIX_DIR}"
@@ -82,7 +84,7 @@ CT_LOG_INFO=y
 # CT_LOG_DEBUG is not set
 CT_LOG_LEVEL_MAX="INFO"
 # CT_LOG_SEE_TOOLS_WARN is not set
-CT_LOG_PROGRESS_BAR=y
+# CT_LOG_PROGRESS_BAR is not set
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
 
@@ -110,6 +112,7 @@ CT_TARGET_LDFLAGS=""
 CT_ARCH_avr32=y
 # CT_ARCH_blackfin is not set
 # CT_ARCH_m68k is not set
+# CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
 # CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
@@ -166,7 +169,9 @@ CT_TARGET_ALIAS="avr32"
 #
 # Toolchain type
 #
+# CT_NATIVE is not set
 CT_CROSS=y
+# CT_CROSS_NATIVE is not set
 # CT_CANADIAN is not set
 CT_TOOLCHAIN_TYPE="cross"
 
@@ -207,19 +212,28 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
-# CT_BINUTILS_V_2_22 is not set
+# CT_BINUTILS_V_2_23_1 is not set
+CT_BINUTILS_V_2_22=y
 # CT_BINUTILS_V_2_21_53 is not set
 # CT_BINUTILS_V_2_21_1a is not set
 # CT_BINUTILS_V_2_20_1a is not set
 # CT_BINUTILS_V_2_19_1a is not set
-CT_BINUTILS_V_2_18a=y
-CT_BINUTILS_VERSION="2.18a"
+# CT_BINUTILS_V_2_18a is not set
+# CT_BINUTILS_CUSTOM is not set
+CT_BINUTILS_VERSION="2.22"
+CT_BINUTILS_2_22_or_later=y
+CT_BINUTILS_2_21_or_later=y
+CT_BINUTILS_2_20_or_later=y
+CT_BINUTILS_2_19_or_later=y
 CT_BINUTILS_2_18_or_later=y
 CT_BINUTILS_HAS_HASH_STYLE=y
+CT_BINUTILS_HAS_GOLD=y
+CT_BINUTILS_HAS_PLUGINS=y
 CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
 CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
+# CT_BINUTILS_PLUGINS is not set
 CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 
 #
@@ -230,7 +244,7 @@ CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.2.2"
+CT_CC_VERSION="4.3.6"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
@@ -253,16 +267,20 @@ CT_CC_gcc=y
 # CT_CC_V_4_4_2 is not set
 # CT_CC_V_4_4_1 is not set
 # CT_CC_V_4_4_0 is not set
-# CT_CC_V_4_3_6 is not set
+CT_CC_V_4_3_6=y
 # CT_CC_V_4_3_5 is not set
 # CT_CC_V_4_3_4 is not set
 # CT_CC_V_4_3_3 is not set
 # CT_CC_V_4_3_2 is not set
 # CT_CC_V_4_3_1 is not set
 # CT_CC_V_4_2_4 is not set
-CT_CC_V_4_2_2=y
-CT_CC_GCC_4_2=y
+# CT_CC_V_4_2_2 is not set
+# CT_CC_CUSTOM is not set
 CT_CC_GCC_4_2_or_later=y
+CT_CC_GCC_4_3=y
+CT_CC_GCC_4_3_or_later=y
+CT_CC_GCC_HAS_PKGVERSION_BUGURL=y
+CT_CC_GCC_USE_GMP_MPFR=y
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
 CT_CC_SUPPORT_JAVA=y
@@ -304,17 +322,19 @@ CT_CC_GCC_LDBL_128=m
 # C-library
 #
 CT_LIBC="newlib"
-CT_LIBC_VERSION="1.17.0"
+CT_LIBC_VERSION="1.20.0"
 CT_LIBC_newlib=y
 # CT_LIBC_none is not set
 CT_LIBC_eglibc_AVAILABLE=y
 CT_LIBC_glibc_AVAILABLE=y
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
-# CT_LIBC_NEWLIB_V_1_20_0 is not set
+# CT_LIBC_NEWLIB_V_2_0_0 is not set
+CT_LIBC_NEWLIB_V_1_20_0=y
 # CT_LIBC_NEWLIB_V_1_19_0 is not set
 # CT_LIBC_NEWLIB_V_1_18_0 is not set
-CT_LIBC_NEWLIB_V_1_17_0=y
+# CT_LIBC_NEWLIB_V_1_17_0 is not set
+# CT_LIBC_NEWLIB_CUSTOM is not set
 
 #
 # Architecture specific options
@@ -353,3 +373,41 @@ CT_LIBC_NEWLIB_EXTRA_CONFIG_ARRAY=""
 #
 # Companion libraries
 #
+CT_COMPLIBS_NEEDED=y
+CT_GMP_NEEDED=y
+CT_MPFR_NEEDED=y
+CT_COMPLIBS=y
+CT_GMP=y
+CT_MPFR=y
+CT_GMP_V_5_0_2=y
+# CT_GMP_V_5_0_1 is not set
+# CT_GMP_V_4_3_2 is not set
+# CT_GMP_V_4_3_1 is not set
+# CT_GMP_V_4_3_0 is not set
+CT_GMP_VERSION="5.0.2"
+CT_MPFR_V_3_1_0=y
+# CT_MPFR_V_3_0_1 is not set
+# CT_MPFR_V_3_0_0 is not set
+# CT_MPFR_V_2_4_2 is not set
+# CT_MPFR_V_2_4_1 is not set
+# CT_MPFR_V_2_4_0 is not set
+CT_MPFR_VERSION="3.1.0"
+
+#
+# Companion libraries common options
+#
+# CT_COMPLIBS_CHECK is not set
+
+#
+# Companion tools
+#
+
+#
+# READ HELP before you say 'Y' below !!!
+#
+# CT_COMP_TOOLS is not set
+
+#
+# Test suite
+#
+# CT_TEST_SUITE_GCC is not set
