Update default config
This updates the default config to gcc-4.4.7, binutils-2.22 and newlib-1.20.0

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG hg+unknown-20130427.182125 Configuration
-# Sun Apr 28 16:12:27 2013
+# Sun Apr 28 16:53:09 2013
 #
 CT_CONFIGURE_has_xz=y
 CT_CONFIGURE_has_svn=y
@@ -15,8 +15,7 @@ CT_MODULES=y
 # crosstool-NG behavior
 #
 # CT_OBSOLETE is not set
-CT_EXPERIMENTAL=y
-# CT_ALLOW_BUILD_AS_ROOT is not set
+# CT_EXPERIMENTAL is not set
 # CT_DEBUG_CT is not set
 
 #
@@ -24,7 +23,6 @@ CT_EXPERIMENTAL=y
 #
 CT_LOCAL_TARBALLS_DIR="${CT_TOP_DIR}/tarballs"
 CT_SAVE_TARBALLS=y
-CT_CUSTOM_LOCATION_ROOT_DIR=""
 CT_WORK_DIR="${CT_TOP_DIR}/.build"
 CT_PREFIX_DIR="${HOME}/x-tools/${CT_TARGET}"
 CT_INSTALL_DIR="${CT_PREFIX_DIR}"
@@ -84,7 +82,7 @@ CT_LOG_INFO=y
 # CT_LOG_DEBUG is not set
 CT_LOG_LEVEL_MAX="INFO"
 # CT_LOG_SEE_TOOLS_WARN is not set
-# CT_LOG_PROGRESS_BAR is not set
+CT_LOG_PROGRESS_BAR=y
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
 
@@ -112,7 +110,6 @@ CT_TARGET_LDFLAGS=""
 CT_ARCH_avr32=y
 # CT_ARCH_blackfin is not set
 # CT_ARCH_m68k is not set
-# CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
 # CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
@@ -155,6 +152,7 @@ CT_FORCE_SYSROOT=y
 CT_USE_SYSROOT=y
 CT_SYSROOT_NAME="sysroot"
 CT_SYSROOT_DIR_PREFIX=""
+CT_WANTS_STATIC_LINK=y
 # CT_STATIC_TOOLCHAIN is not set
 CT_TOOLCHAIN_PKGVERSION=""
 CT_TOOLCHAIN_BUGURL=""
@@ -169,9 +167,7 @@ CT_TARGET_ALIAS="avr32"
 #
 # Toolchain type
 #
-# CT_NATIVE is not set
 CT_CROSS=y
-# CT_CROSS_NATIVE is not set
 # CT_CANADIAN is not set
 CT_TOOLCHAIN_TYPE="cross"
 
@@ -212,14 +208,12 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
-# CT_BINUTILS_V_2_23_1 is not set
 CT_BINUTILS_V_2_22=y
 # CT_BINUTILS_V_2_21_53 is not set
 # CT_BINUTILS_V_2_21_1a is not set
 # CT_BINUTILS_V_2_20_1a is not set
 # CT_BINUTILS_V_2_19_1a is not set
 # CT_BINUTILS_V_2_18a is not set
-# CT_BINUTILS_CUSTOM is not set
 CT_BINUTILS_VERSION="2.22"
 CT_BINUTILS_2_22_or_later=y
 CT_BINUTILS_2_21_or_later=y
@@ -244,7 +238,7 @@ CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.3.6"
+CT_CC_VERSION="4.4.7"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
@@ -259,7 +253,7 @@ CT_CC_gcc=y
 # CT_CC_V_4_5_2 is not set
 # CT_CC_V_4_5_1 is not set
 # CT_CC_V_4_5_0 is not set
-# CT_CC_V_4_4_7 is not set
+CT_CC_V_4_4_7=y
 # CT_CC_V_4_4_6 is not set
 # CT_CC_V_4_4_5 is not set
 # CT_CC_V_4_4_4 is not set
@@ -267,7 +261,7 @@ CT_CC_gcc=y
 # CT_CC_V_4_4_2 is not set
 # CT_CC_V_4_4_1 is not set
 # CT_CC_V_4_4_0 is not set
-CT_CC_V_4_3_6=y
+# CT_CC_V_4_3_6 is not set
 # CT_CC_V_4_3_5 is not set
 # CT_CC_V_4_3_4 is not set
 # CT_CC_V_4_3_3 is not set
@@ -275,10 +269,11 @@ CT_CC_V_4_3_6=y
 # CT_CC_V_4_3_1 is not set
 # CT_CC_V_4_2_4 is not set
 # CT_CC_V_4_2_2 is not set
-# CT_CC_CUSTOM is not set
 CT_CC_GCC_4_2_or_later=y
-CT_CC_GCC_4_3=y
 CT_CC_GCC_4_3_or_later=y
+CT_CC_GCC_4_4=y
+CT_CC_GCC_4_4_or_later=y
+CT_CC_GCC_HAS_GRAPHITE=y
 CT_CC_GCC_HAS_PKGVERSION_BUGURL=y
 CT_CC_GCC_USE_GMP_MPFR=y
 CT_CC_SUPPORT_CXX=y
@@ -298,11 +293,13 @@ CT_CC_SUPPORT_OBJCXX=y
 #
 CT_CC_ENABLE_CXX_FLAGS=""
 CT_CC_CORE_EXTRA_CONFIG_ARRAY=""
+CT_CC_STATIC_LIBSTDCXX=y
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 
 #
 # Optimisation features
 #
+# CT_CC_GCC_USE_GRAPHITE is not set
 
 #
 # Settings for libraries running on target
@@ -329,12 +326,10 @@ CT_LIBC_eglibc_AVAILABLE=y
 CT_LIBC_glibc_AVAILABLE=y
 CT_LIBC_mingw_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
-# CT_LIBC_NEWLIB_V_2_0_0 is not set
 CT_LIBC_NEWLIB_V_1_20_0=y
 # CT_LIBC_NEWLIB_V_1_19_0 is not set
 # CT_LIBC_NEWLIB_V_1_18_0 is not set
 # CT_LIBC_NEWLIB_V_1_17_0 is not set
-# CT_LIBC_NEWLIB_CUSTOM is not set
 
 #
 # Architecture specific options
@@ -392,22 +387,18 @@ CT_MPFR_V_3_1_0=y
 # CT_MPFR_V_2_4_1 is not set
 # CT_MPFR_V_2_4_0 is not set
 CT_MPFR_VERSION="3.1.0"
+# CT_PPL_V_0_11_2 is not set
+# CT_PPL_V_0_11_1 is not set
+# CT_PPL_V_0_11 is not set
+# CT_PPL_V_0_10_2 is not set
+# CT_CLOOG_V_0_15_11 is not set
+# CT_CLOOG_V_0_15_10 is not set
+# CT_CLOOG_V_0_15_9 is not set
+# CT_CLOOG_V_0_15_8 is not set
+# CT_CLOOG_V_0_15_7 is not set
+# CT_CLOOG_V_0_15_6 is not set
 
 #
 # Companion libraries common options
 #
 # CT_COMPLIBS_CHECK is not set
-
-#
-# Companion tools
-#
-
-#
-# READ HELP before you say 'Y' below !!!
-#
-# CT_COMP_TOOLS is not set
-
-#
-# Test suite
-#
-# CT_TEST_SUITE_GCC is not set
